# ConfidentialPackageManager

./: CMakeLists.txt  README.md  readme.adoc
cmake/: add-enclave.cmake
source/: CMakeLists.txt  cpm_config.h  cpm_crypto.c  cpm_crypto.h  main.c
ta/: CMakeLists.txt  cpm.c  cpm.h  cpm_config.h  cpm_crypto.c  cpm_crypto.h  ta_secstor.c  ta_secstor.h
test/: CMakeLists.txt  host.c  host.h  main.c
